laboratorio en curso

--- a/index.html
+++ b/index.html
@@ -3,55 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae de [Nombre del Estudiante]</title>
+    <link rel="stylesheet" href="css/styles.css"
+    <title>Curriculum Vitae de Kihuaw Chaves </title>
 </head>
 <body>
     <header>
-        <h1>[Nombre y Apellidos]</h1>
-        <p>[Profesión o Título]</p>
+        <h1>Kihuaw Chaves Bonilla</h1>
+        <p>Bachiller en Ciencias</p>
     </header>
 
     <main>
         <section id="sobre-mi">
             <h2>Sobre Mí</h2>
             <img src="" alt="Foto de perfil">
-            <p>[Breve descripción profesional y objetivos.]</p>
+            <p>Estudiante de la carrera de Tecnologia en Desarrollo de Software en la Pontificie Universidad Catolica del Ecuador.
+            Apasionado a la Tecnologia y a como esta a ido avanzando en el largo de la historia.
+            </p>
+            <p>
+            Apasionado por la tecnologia y como esta a ido avanzando a lo largo de la historia.
+            </p>
+            <p>
+             Responsable, capaz , preciso y sobre todo dispuesto a aprender y progresar para un futuro lleno de exitos
+            </p>
         </section>
 
         <section id="habilidades">
             <h2>Habilidades</h2>
             <ul>
-                <li>[Habilidad 1]</li>
-                <li>[Habilidad 2]</li>
-                <li>[Habilidad 3]</li>
-                <li>[Habilidad 4]</li>
-                <li>[Habilidad 5]</li>
+                <li>Rapido aprendizaje</li>
+                <li>Instrumentos musicales</li>
+                <li>Facilidad de palabra</li>
+                <li>Atencion al cliente </li>
+                <li>Fluidez en el idiooma Kichwa</li>
             </ul>
         </section>
 
         <section id="estudios">
             <h2>Estudios</h2>
             <article>
-                <h3>[Título o Grado]</h3>
-                <p><strong>Institución:</strong> [Nombre de la Universidad/Colegio]</p>
-                <p><strong>Período:</strong> [Año inicio - Año fin]</p>
-                <p>[Descripción breve de los estudios realizados.]</p>
-            </article>
-            <article>
-                <h3>[Título o Grado]</h3>
-                <p><strong>Institución:</strong> [Nombre de la Universidad/Colegio]</p>
-                <p><strong>Período:</strong> [Año inicio - Año fin]</p>
-                <p>[Descripción breve de los estudios realizados.]</p>
+                <h3>Bachiller en Ciencias </h3>
+                <p><strong>Institución:</strong> Unidad Educativa "Aviación Civil" </p>
+                <p><strong>Período:</strong> 2019-2025</p>
+                <p>Estudiante de la Institución por 6 años desde 8vo de EGB hasta 3ro BGU, estudiante exonerado del examen de grado por su buen rendimiento académico </p>
             </article>
         </section>
 
         <section id="hobbies">
             <h2>Hobbies</h2>
             <ul>
-                <li>[Hobby 1]</li>
-                <li>[Hobby 2]</li>
-                <li>[Hobby 3]</li>
-                <li>[Hobby 4]</li>
+                <li>Entonar la armónica y la flauta de carrizo.</li>
+                <li>Videojuegos</li>
+                <li>Escuchar música de cualquier tipo.</li>
+                <li>Ver películas de acción y ciencia ficción.</li>
             </ul>
         </section>
 
@@ -60,25 +63,25 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="" alt="LinkedIn">
+                        <img src="assets/linkedin.webp" alt="LinkedIn" class="social-icon">
                         LinkedIn
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="" alt="GitHub">
+                        <img src="assets/github.png" alt="GitHub" class="social-icon">
                         GitHub
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="" alt="Twitter">
-                        Twitter
+                        <img src="assets/twx.jpg" alt="X" class="social-icon">
+                        X
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="" alt="Instagram">
+                        <img src="assets/instagram.avif" alt="Instagram" class="social-icon">
                         Instagram
                     </a>
                 </li>
