--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     <main>
         <section id="sobre-mi">
+            <div> class=""
             <h2>Sobre Mí</h2>
-            <img src="" alt="Foto de perfil">
+            <img src="assets/r10.jpg" alt="Foto de perfil">
             <p>Estudiante de la carrera de Tecnologia en Desarrollo de Software en la Pontificie Universidad Catolica del Ecuador.
             Apasionado a la Tecnologia y a como esta a ido avanzando en el largo de la historia.
             </p>
@@ -25,6 +26,7 @@
             <p>
              Responsable, capaz , preciso y sobre todo dispuesto a aprender y progresar para un futuro lleno de exitos
             </p>
+            </div>
         </section>
 
         <section id="habilidades">
@@ -90,7 +92,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 [Nombre y Apellidos]. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Kihuaw Chaves Bonilla. Todos los derechos reservados.</p>
     </footer>
 </body>
 </html>
