--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 
     <main>
         <section id="sobre-mi">
-            <div> class=""
+        <div class="sobre-mi">
             <h2>Sobre Mí</h2>
             <img src="assets/r10.jpg" alt="Foto de perfil">
-            <p>Estudiante de la carrera de Tecnologia en Desarrollo de Software en la Pontificie Universidad Catolica del Ecuador.
+            <p>
+                Estudiante de la carrera de Tecnologia en Desarrollo de Software en la Pontificie Universidad Catolica del Ecuador.
             Apasionado a la Tecnologia y a como esta a ido avanzando en el largo de la historia.
             </p>
             <p>
@@ -26,7 +27,7 @@
             <p>
              Responsable, capaz , preciso y sobre todo dispuesto a aprender y progresar para un futuro lleno de exitos
             </p>
-            </div>
+        </div>
         </section>
 
         <section id="habilidades">
